--- a/main/www/css/style.css
+++ b/main/www/css/style.css
@@ -1,1 +1,18 @@
 /* Empty. Add your own CSS if you like */
+.more{
+	width: 180px;
+	height: 180px;
+
+}
+.outside{
+
+	width: 340px;
+	height: 500px;
+}
+.bor{
+	border-left:thin solid grey;
+}
+.col{
+	border-bottom: thin solid grey;
+
+}
