--- a/main/www/templates/tab-chats.html
+++ b/main/www/templates/tab-chats.html
@@ -1,10 +1,21 @@
-<ion-view view-title="Chats">
-  <ion-content>
+
+
+<ion-view view-title="EventMaster">
+  <ion-content class="padding">
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img ng-src="{{chat.face}}">
+
+    <div class ="outside">
+
+      <ion-item class="list card item-remove-animate  item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
+        
         <h2>{{chat.name}}</h2>
-        <p>{{chat.lastText}}</p>
+           <img ng-src="{{chat.face}}" style="width: 300px; height: 300px">
+      
+
+
+       
+
+
         <i class="icon ion-chevron-right icon-accessory"></i>
 
         <ion-option-button class="button-assertive" ng-click="remove(chat)">
@@ -12,5 +23,13 @@
         </ion-option-button>
       </ion-item>
     </ion-list>
+    
+<div class="text-center">
+  <button class="button button-outline button-block button-positive">
+    Show More
+  </button>
+</div>
+</div>
+
   </ion-content>
 </ion-view>
