Chris-cool Maps

--- a/main/www/templates/chat-detail.html
+++ b/main/www/templates/chat-detail.html
@@ -7,16 +7,16 @@
 <ion-view view-title="{{chat.name}}">
   <ion-content class="padding">
     <img ng-src="{{chat.face}}" style="width: 355px; height: 200px">
-    
+
     <p class = "wrapper">
       {{chat.name}}
     </p>
 
 
 <div class="row" >
- 
 
- <div class="col col-50" ng-click = "gotourl('/chats')" > <i class="icon ion-location" > 
+
+ <div class="col col-50" ng-click = "gotourl('/map')" > <i class="icon ion-location" > 
   <strong>LOCATION </strong></i><br>
   {{chat.Location}}
 </div>
@@ -25,7 +25,7 @@
   <div class="bor col col-50"> <i class="icon ion-clock ">  <strong>DATES </strong></i>
   <br>
   {{chat.Date}}
- 
+
 </div>
 </div>
 
