Map directions working

--- a/main/www/templates/map.html
+++ b/main/www/templates/map.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Map">
 
   <ion-nav-buttons side="left">
-      <a class="button icon-left ion-chevron-left button-clear button-dark"></a>
+      <a class="button icon-left ion-chevron-left button-clear button-white"></a>
   </ion-nav-buttons>
 
   <ion-nav-buttons side="right">
