--- a/main/www/templates/tabs.html
+++ b/main/www/templates/tabs.html
@@ -5,20 +5,20 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-bottom tabs-color-active-positive">
 
+
+
+<!-- Chats Tab -->
+  <ion-tab  title="Home" icon-off="ion-home" icon-on="ion-home" href="#/tab/chats">
+    <ion-nav-view name="tab-chats"></ion-nav-view>
+  </ion-tab>
+  
   <!-- Dashboard Tab -->
-  <ion-tab title="Home" icon-off="ion-home" icon-on="ion-home" href="#/tab/dash">
+  <ion-tab title="Search" icon-off="ion-search" icon-on="ion-search" href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
-  <!-- Chats Tab -->
-  <ion-tab title="Search" icon-off="ion-search" icon-on="ion-search" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
-  </ion-tab>
+  
 
-  <!-- Account Tab -->
-  <ion-tab title="Calender" icon-off="ion-ios-calendar-outline" icon-on="ion-ios-calendar-outline" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
-  </ion-tab>
 
 
 
