--- a/main/www/templates/tab-dash.html
+++ b/main/www/templates/tab-dash.html
@@ -1,59 +1,18 @@
 <ion-view view-title="EventMaster">
 
-  <div class="bar bar-header">
-<button class="button icon ion-navicon"></button>
-<h1 class="title">Header Buttons</h1>
-</div>
-
   <ion-content class="padding">
 
+<form name="form.search" ng-submit="form.search.$valid && goToList()">
+     <label class="item item-input">
+       <i class="icon ion-search placeholder-icon"></i>
+       <input type="text" ng-model="search.string" required="required" placeholder="Event name">
+     </label>
+     <br />
+
+ 
+     <button class="button button-calm button-block" ng-disabled="form.search.$invalid"><b>Search</b></button>
+   </form>
 
 
-<br></br>
-
-    <p>
-    Scroll in order to view upcoming events
-  </p>
-
-    <div class="list card">
-
-      <div class="item item-avatar">
-        <img src="mcfly.jpg">
-        <h2>Marty McFly</h2>
-        <p>November 05, 1955</p>
-      </div>
-    </div>
-
-      <div class="list card">
-
-        <div class="item item-avatar">
-          <img src="mcfly.jpg">
-          <h2>Marty McFly</h2>
-          <p>November 05, 1955</p>
-        </div>
-      </div>
-
-        <div class="list card">
-
-          <div class="item item-avatar">
-            <img src="mcfly.jpg">
-            <h2>Marty McFly</h2>
-            <p>November 05, 1955</p>
-          </div>
-        </div>
-
-          <div class="list card">
-
-            <div class="item item-avatar">
-              <img src="mcfly.jpg">
-              <h2>Marty McFly</h2>
-              <p>fsdgfggfg</p>
-            </div>
-
-    </div>
-
-  <button class="button button-block button-outline button-positive">
-Show More
-</button>
   </ion-content>
 </ion-view>
